[tool.poetry]
name = "gareth"
version = "0.0.0"
description = "Tool to automate the developer setup of GrimoireLab"
authors = [
    "Venu Vardhan Reddy Tekula <venu@bitergia.com>"
]
license = "GPL-3.0-or-later"

readme = "README.md"

packages = [
    { include = "gareth"},
    { include = "tests", format = "sdist" },
]

include = [
    "AUTHORS",
    "README.md",
    "LICENSE",
    "NEWS"
]

[tool.poetry.scripts]
gareth = 'gareth.gareth:main'

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
PyGithub = "^1.55"
GitPython = "^3.1.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"
